Changed the factual details

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{ page.title }}</title>
-    <meta name="viewport" content="width=device-width">
-
-    <!-- syntax highlighting CSS -->
-
-    <!-- Custom CSS -->
 
     <link rel="stylesheet" href="https://github.com/themes/minimal/stylesheets/styles.css" media="screen">
     <link rel="stylesheet" href="/css/custom.css">
@@ -17,32 +12,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
   <body>
-
     <div class="wrapper">
       <header>
-      <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+	<h1 class="title"><a href="/">{{ site.name }}</a></h1>
 
-      <!-- <h3>The Goods</h3> -->
-      <p class="view"><a href="/projects">Open Source Projects<small>Code that Might be Useful to You</small></a></p>
-      <p class="view"><a href="/speaking">Talks I've Given<small>On Technologies and Ideas</small></a></p>
-      <p class="view"><a href="/posts">Thoughts<small>Where I Sometimes Write Things</small></a></p>
-      <p class="view"><a href="/resume">Resume <small>If You Still Believe In Those</small></a></p>
+	<!--<h3>Small heading 1</h3> -->
+	<!--<p class="view"><a href="">Description<small>mini discription</small></a></p>-->
+	<!--<h3>Small headint 2</h3>-->
+	<!--<p class="view"><a href="">Description<small>mini discription</small></a></p>-->
 
-
-
-      <h3>Follow Me On</h3>
-      <p class="view"><a href="https://github.com/technicalpickles" target="tab">GitHub<small>If coding is your thing</small></a></li>
-      <p class="view"><a href="https://twitter.com/techpickles" target="tab">Twitter<small>If you tweet</small></a></li>
-      <p class="view"><a href="http://technicalpicklejar.tumblr.com" target="tab">Tumblr<small>If you're ADD</small></a></li>
+	<p class="view"><a href="/">About <small>Who am I</small></a></p>
+	<p class="view"><a href="/posts">Posts <small>Where I crib/scribble</small></a></p>
+	<p class="view"><a href="/projects">Projects <small>Open and not so open</small></a></p>
+	<p class="view"><a href="/resume">Resume <small>The technical details</small></a></p>
+	<p class="view"><a href="/education">Education <small>The culprits</small></a></p>
+	<p class="view"><a href="https://github.com/aerohit" target="tab">GitHub<small>Where I embarrass myself</small></a></p>
 
       </header>
+
       <section id="main">
 
-      {{ content }}
+	{{ content }}
 
       </section>
+
       <footer>
-      <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+	<p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> &mdash;
+	  Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
+	</p>
       </footer>
     </div>
 
@@ -59,5 +56,5 @@
     <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
       <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
 
-    </body>
-  </html>
+  </body>
+</html>
