Moved posts to scribble and changed permalink

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 	<!--<p class="view"><a href="">Description<small>mini discription</small></a></p>-->
 
 	<p class="view"><a href="/">About <small>Who am I</small></a></p>
-	<p class="view"><a href="/posts">Posts <small>Where I crib/scribble</small></a></p>
+	<p class="view"><a href="/scribbles">Scribbles <small>Where I crib</small></a></p>
 	<p class="view"><a href="/projects">Projects <small>Open and not so open</small></a></p>
 	<p class="view"><a href="/resume">Resume <small>The technical details</small></a></p>
 	<p class="view"><a href="/education">Education <small>The culprits</small></a></p>
