--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,9 +37,10 @@
       </section>
 
       <footer>
-	<p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> &mdash;
-	  Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>
-	</p>
+      <p><small>
+	Hosted on <a href="http://pages.github.com">GitHub Pages</a> &mdash;
+	Theme by <a href="https://github.com/orderedlist">orderedlist</a>
+      </small></p>
       </footer>
     </div>
 
